# hpc

./: README.md
.github/workflows/: build.yml
admin/: Cargo.toml
admin/src/: main.rs
admin/src/utils/: c.rs  command.rs  contactserver.rs  mod.rs
admin/src/utils/c/: admin.rs  clients.rs
admin/utils/: ascii.art
client/: Cargo.toml
client/src/: main.rs
client/src/socket/: init.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/api/: init.rs  mod.rs
server/src/api/routes/: admin.rs  clients.rs
server/src/helper/: logs.rs
server/src/socket/: mod.rs
server/utils/: ascii.art
